# qt-device-manager

./: .gitignore  CMakeLists.txt  README.md  dashboard.cpp  dashboard.h  dashboard.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
